# akong-online

./: .dockerignore  .env  .env.example  .env.example.server  .gitignore  App.tsx  AppRouter.tsx  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FRONTEND_ROADMAP.md  GEMINI.md  GOOGLE_OAUTH_SETUP.md  IMMERSIVE_UPGRADE.md  MATCH_SYSTEM_IMPLEMENTATION.md  MOBILE_GAME_OPTIMIZATION.md  MOBILE_OPTIMIZATION.md  PHASE2_IMPLEMENTATION.md  PWA_PERFORMANCE_IMPROVEMENTS.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SEO_GUIDE.md  UX_IMPROVEMENTS.md  capacitor.config.ts  fly.toml  generate-icons.js  generate_og_image.py  index.html  index.tsx  metadata.json  optimize-images.js  package-lock.json  package.json  resize_og_image.py  server.js  types.ts  vite.config.ts
components/: Board.tsx  BoardCalibrationTool.tsx  BoardRevolutionary.tsx  ErrorBoundary.tsx  GameAnalysis.tsx  GameTimerDisplay.tsx  GranaryCalibrationTool.tsx  Hand.tsx  InstallBanner.tsx  InvitationSystem.tsx  LandscapePrompt.tsx  MatchScoreDisplay.tsx  MoveHistory.tsx  PWAInstallPrompt.tsx  Pit.tsx  SimulationControlPanel.tsx  ToastProvider.tsx
config/: boardSkinConfigs.ts  countries.ts  (+1 more)
engine-rs/: Cargo.toml  parity.test.ts
engine-rs/benches/: execute_move.rs
engine-rs/src/: lib.rs  rules.rs  state.rs
engine-rs/src/book/: builder.rs  hash.rs  mod.rs  storage.rs
engine-rs/src/egtb/: mod.rs  rank.rs  solver.rs  storage.rs
engine-rs/src/search/: eval.rs  mod.rs  negamax.rs
engine-rs/tests/: book_annotate_roundtrip.rs  egtb_full_validation.rs  egtb_solver.rs  egtb_storage.rs  rules_parity.rs
(+369 files in other folders)
