[package]
name = "akong-engine"
version = "0.1.0"
edition = "2021"
description = "Bit-exact Rust engine for Songo (Mgpwem) — parity with services/songoLogic.ts"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "akong_engine"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrayvec = "0.7"
zstd = "0.13"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "execute_move"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
